# VCS

./: .ignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  vcs.py
.vcs/: config.json  tracked_files.json  traked_files.json
commands/: __init__.py  add_function.py  branch_function.py  check_function.py  checkout_function.py  commit_function.py  ignore_function.py  init_function.py  log_function.py  merge_function.py  reset_function.py  rollback_function.py  status_function.py
commands/init_function/: __init__.py
docs/: add.md  branch.md  check.md  checkout.md  commit.md  ignore.md  init.md  log.md  merge.md  reset.md  rollback.md  status.md
src/: vcs.py  vcs_beta.py
src/commands/: add_function.py  branch_function.py  check_function.py  checkout_function.py  commit_function.py  ignore_function.py  init_function.py  log_function.py  merge_function.py  reset_function.py  rollback_function.py  status_function.py
src/parsers/: __init__.py  add_parser.py  branch_parser.py  check_parser.py  checkout_parser.py  commit_parser.py  ignore_parser.py  init_parser.py  log_parser.py  merge_parser.py  parser.py  reset_parser.py  rollback_parser.py  status_parser.py
src/test/: .ignore  main.py
src/tools/: __init__.py  branch_tools.py  commit_tools.py  file_tools.py  flags_tools.py  hash_tools.py  help_tools.py  ignore_tools.py  (+1 more)
test/: .ignore  LICENSE  README.md  main.py
tests/: LICENSE  readme.md
tools/: __init__.py  branch_tools.py  commit_tools.py  file_tools.py  flags_tools.py  hash_tools.py  help_tools.py  ignore_tools.py  ignore_tpl_tools.py
(+32 files in other folders)
