[tool.poetry]
name = "vcs"
version = "1.0.0"
description = "Resolved conflicts."
authors = [""]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = ">=12.5.1,<12.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
